--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
 keywords: security, censorship, Yining Shi # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: /assets/img/kagayaki.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: kagayaki.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://ED-Y-S.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
