--- a/_config.yml
+++ b/_config.yml
@@ -184,13 +184,21 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
-
+  misc:
+    output: true
+    permalink: /misc/fav.md/
+  
 announcements:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
   limit: 5 # leave blank to include all the news in the `_news` folder
 
-More_About_Me:
+projects:
+  enabled: true
+  scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
+  limit: 2 # leave blank to include all the blog posts
+
+latest_posts:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
   limit: 0 # leave blank to include all the blog posts
